--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "nf start"
   },
   "dependencies": {
-    "serve": "~10.1.1",
-    "foreman": "~3.0.1"
+    "animate.css": "^3.7.2",
+    "foreman": "~3.0.1",
+    "serve": "~10.1.1"
   }
 }
